<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="aboutText">Acerca de</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza puede saltar solo una pieza.</string>
    <string name="firstCategoryPrefTitle">Datos personales</string>
    <string name="editTextPrefTitle">Nombre del jugador</string>
    <string name="editTextPrefSummary">Pulse para teclear el nombre del jugador</string>
    <string name="secondCategoryPrefTitle">Ajustes del juego</string>
    <string name="preferencesText">Ajustes</string>
    <string name="resetText">Reiniciar</string>
    <string name="saveText">Guardar</string>
    <string name="restoreText">Cargar</string>
    <string name="bestPlayersText">Mejores jugadores</string>
    <string name="borrarPuntuacionesText">Borrar puntuaciones</string>
    <string name="emptyPlayersText">No existe ninguna puntuación guardada</string>

    <string name="headerNombre">Jugador</string>
    <string name="headerPuntuacion">Puntuación</string>
    <string name="headerFecha">Fecha</string>

    <string name="saveGameText">Partida guardada</string>
    <string name="restoreGameText">Partida cargada</string>
    <string name="failRestoreGameText">Error al cargar la partida</string>
    <string name="emptyFileRestoreGameText">No existe ninguna partida guardada</string>
    <string name="saveScoreText">Puntuación almacenada</string>
    <string name="textQuedan">Quedan</string>
    <string name="textFichas">fichas</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Quiere jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Diálogo Reset -->
    <string name="txtDialogoResetTitulo">Reiniciar partida</string>
    <string name="txtDialogoResetPregunta">¿Quiere reiniciar la partida?</string>

    <!-- Diálogo Delete Puntuaciones -->
    <string name="txtDialogoDeleteTitulo">Borrar puntuaciones</string>
    <string name="txtDialogoDeletePregunta">¿Quiere borrar todas las mejores puntuaciones?</string>
    <string name="deletePuntuacionesText">Las mejores puntuaciones han sido eliminadas</string>
</resources>