<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/reset"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/resetText"/>

    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="200"
        android:title="@string/saveText"/>

    <item
        android:id="@+id/restore"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="300"
        android:title="@string/restoreText"/>

    <item
        android:id="@+id/preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="400"
        android:title="@string/preferencesText"/>
    <item
        android:id="@+id/menuAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="500"
        android:title="@string/aboutText"/>
</menu>