<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/cabeceraNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:gravity="center"
            android:text="@string/headerNombre" />

        <TextView
            android:id="@+id/cabeceraPuntuacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/headerPuntuacion" />

        <TextView
            android:id="@+id/cabeceraFecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:gravity="center"
            android:text="@string/headerFecha" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvListadoElementos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/borrarPuntuaciones"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/borrarPuntuacionesText"
            />
    </LinearLayout>

</LinearLayout>